--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "antd": "^5.12.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.5",
